Complete unit test.

--- a/QuestionFour/QuestionFourTest/QuestionFourTest.csproj
+++ b/QuestionFour/QuestionFourTest/QuestionFourTest.csproj
@@ -53,6 +53,12 @@
     <Compile Include="UnitTest1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\QuestionFour\QuestionFour.csproj">
+      <Project>{95e6b142-36d2-4452-b559-d5086cab6db4}</Project>
+      <Name>QuestionFour</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
       <ItemGroup>
