I wrote the whole thang.

--- a/QuestionFive/QuestionFiveTest/QuestionFiveTest.csproj
+++ b/QuestionFive/QuestionFiveTest/QuestionFiveTest.csproj
@@ -53,6 +53,12 @@
     <Compile Include="UnitTest1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\QuestionFive\QuestionFive.csproj">
+      <Project>{5ab7f193-ae75-4cd6-a292-c84fb9e24ca3}</Project>
+      <Name>QuestionFive</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
       <ItemGroup>
