User side initialized.

--- a/Chp6Lsn1/Chp6Lsn1Test/Chp6Lsn1Test.csproj
+++ b/Chp6Lsn1/Chp6Lsn1Test/Chp6Lsn1Test.csproj
@@ -50,8 +50,14 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
-    <Compile Include="UnitTest1.cs" />
+    <Compile Include="Test.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Chp6Lsn1\Chp6Lsn1.csproj">
+      <Project>{72afce29-4b06-41cd-8c4e-1de3ebc05dfb}</Project>
+      <Name>Chp6Lsn1</Name>
+    </ProjectReference>
   </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
