User input added.

--- a/Chp6Lsn3/UnitTestProject/UnitTestProject.csproj
+++ b/Chp6Lsn3/UnitTestProject/UnitTestProject.csproj
@@ -53,6 +53,12 @@
     <Compile Include="UnitTest1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Chp6Lsn3\Chp6Lsn3.csproj">
+      <Project>{5dc17abf-542e-469b-add7-f0a824bd6207}</Project>
+      <Name>Chp6Lsn3</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
       <ItemGroup>
