--- a/Chp9Lsn11/UserInputHandler/UserInputHandler.csproj
+++ b/Chp9Lsn11/UserInputHandler/UserInputHandler.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{E93490FF-BF9C-4551-910A-E20266109819}</ProjectGuid>
+    <ProjectGuid>{729E097F-C0E3-4028-B0D1-6F5AE1A64A56}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Chp9Lsn11</RootNamespace>
-    <AssemblyName>Chp9Lsn11</AssemblyName>
+    <RootNamespace>UserInputHandler</RootNamespace>
+    <AssemblyName>UserInputHandler</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -43,17 +43,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Program.cs" />
+    <Compile Include="UserInput.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\UserInputHandler\UserInputHandler.csproj">
-      <Project>{729e097f-c0e3-4028-b0d1-6f5ae1a64a56}</Project>
-      <Name>UserInputHandler</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
