--- a/Chp12Lsn7/UserCommunication/UserCommunication.csproj
+++ b/Chp12Lsn7/UserCommunication/UserCommunication.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{AF16DA53-8070-45CB-A640-E61B15201D48}</ProjectGuid>
+    <ProjectGuid>{5F26320F-5DC6-49AB-8FB7-E13372E789B0}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Chp12Lsn7</RootNamespace>
-    <AssemblyName>Chp12Lsn7</AssemblyName>
+    <RootNamespace>UserCommunication</RootNamespace>
+    <AssemblyName>UserCommunication</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -43,17 +43,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Program.cs" />
+    <Compile Include="UserBarrier.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\UserCommunication\UserCommunication.csproj">
-      <Project>{5f26320f-5dc6-49ab-8fb7-e13372e789b0}</Project>
-      <Name>UserCommunication</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
