--- a/Chp10Lsn2/Variate/Variate.csproj
+++ b/Chp10Lsn2/Variate/Variate.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{42A40D1F-01C8-4597-96B3-CCAC0A9BD644}</ProjectGuid>
+    <ProjectGuid>{F2F9863C-93D9-4A9E-B8E1-92DAEDC82665}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Chp10Lsn2</RootNamespace>
-    <AssemblyName>Chp10Lsn2</AssemblyName>
+    <RootNamespace>Variate</RootNamespace>
+    <AssemblyName>Variate</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -43,7 +43,6 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Print.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
