--- a/Chp10Lsn4/Chp10Lsn4/Chp10Lsn4.csproj
+++ b/Chp10Lsn4/Chp10Lsn4/Chp10Lsn4.csproj
@@ -45,6 +45,7 @@
   <ItemGroup>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Subset.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
